<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".Menu">


    <Button
        android:id="@+id/games"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_to_games" />

    <Button
        android:id="@+id/news"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_to_news" />

    <Button
        android:id="@+id/friends"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_to_friends" />

    <Button
        android:id="@+id/messages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_to_messages" />

    <Button
        android:id="@+id/communities"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_to_communities" />

    <Button
        android:id="@+id/photos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_to_photos" />
</LinearLayout>